@@ -4,7 +4,9 @@ Changelog
 0.8 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added a date validator, you shouldn't choose a token end date
+  in the past.
+  [davidemoro]
 
 
 0.7 (2012-06-14)
